--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 <header id="header">
 	<div id="head" class="parallax" parallax-speed="1">
 		<h1 id="logo" class="text-center">
-			<span class="title">Anthony Russel</span>
+			<span class="title">David Chonev</span>
 			<span class="tagline">A mystery person<br>
 				<a href="">anthony.russel42@example.com</a></span>
 		</h1>
