--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 	<div id="head" class="parallax" parallax-speed="2">
 		<h1 id="logo" class="text-center">
 			<img class="img-circle" src="assets/images/guy.jpg" alt="">
-			<span class="title">Nuwan Attygalle</span>
-			<span class="tagline">A mystery person<br>
-				<a href="">nuwan.t.attyglle@gmail.com</a></span>
+			<span class="title">David Chonev</span>
+			<span class="tagline">And, I WIN!<br>
+				<a href="">david.chonev18@gmail.com</a></span>
 		</h1>
 	</div>
 
